# SqlMake

./: MANIFEST.in  Makefile  README.rst  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  invocation.rst  overview.rst  requirements.txt  workflow.rst
sqlmake/: __main__.py  fileparser.py  indexer.py
src/: .indexer.py.swp  fileparser.py  indexer.py  sqlmake.py
