[metadata]
name = SqlMake
description = Command line tool to build a SQL schema
version = 0.3.0
author = AmvTek developers
author_email = devel@amvtek.com
url = https://github.com/amvtek/SqlMake/
project_urls =
    Documentation =https://sqlmake.readthedocs.org/en/latest/
    Source = https://github.com/amvtek/SqlMake/
    Tracker = https://github.com/amvtek/SqlMake/issues
    Download = https://pypi.org/project/SqlMake/#files
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
install_requires =

[options.entry_points]
console_scripts =
    sqlmake = sqlmake.__main__:main
